# clean

./: .gitignore  LICENSE  README.md  clean.py  setup.cfg  test.txt  txt2akn.py
clean/: clean.py
clean/tests/: r34.clean  r34span.clean  test_an.py  test_indents.py  test_parser.py
clean_law.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: rps.clean  test_an.py  test_parser.py
