[metadata]
name = clean-law
version = 0.0.3
description = Generate Akoma Ntoso from Plain Text Laws
long_description = file: README.md
long_description_content_type = text/markdown
author = Jason Morris
author_email = jason@lexpedite.ca
license = MIT
url = https://github.com/lexpedite/clean
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Legal Industry
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Topic :: Text Processing :: Markup
    

[options]
packages = clean
install_requires =
    pyparsing >= 3.0.6
    pytest >= 5.4.3
    ; python_version == "2.6"
